<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_red"
    tools:context=".signIn">

    <EditText
        android:id="@+id/signName"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:ems="10"
        android:hint="@string/please_enter_your_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/signEmail"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/email_signIn"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/signPhoneNumber"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_SignIn"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="124dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/donate" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/blood_donation_SignIn"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signButton"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginBottom="114dp"
        android:backgroundTint="@color/black"
        android:text="@string/register"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signAddress"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/signPassword"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signEmail" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signButton" />

    <TextView
        android:id="@+id/loginChange"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:onClick="loginChange"
        android:text="@string/I_log_in"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/signButton" />

    <EditText
        android:id="@+id/signAddress"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_home_work_24"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signPassword" />

    <Spinner
        android:id="@+id/blood_spinner"
        android:layout_width="171dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/bloos_type"
        app:layout_constraintBottom_toTopOf="@+id/signEmail"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/signPhoneNumber" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:text="@string/blood_type"
        android:textColor="#FFFEFE"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/blood_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signPhoneNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>