<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splashScreen"
    android:background="@color/light_red">

    <Button
        android:id="@+id/I_login"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginTop="508dp"
        android:backgroundTint="@color/white"
        android:onClick="introLogin"
        android:text="@string/I_log_in"
        android:textColor="@color/light_red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/I_sign"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@android:color/black"
        android:onClick="introSignIn"
        android:text="@string/create_a_new_account"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/I_login" />

    <TextView
        android:id="@+id/I_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="casual"
        android:text="@string/blood_donation_inti"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/I_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/_2022"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/I_tv" />

    <pl.droidsonroids.gif.GifImageView

        android:id="@+id/gifImageView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginBottom="72dp"
        android:src="@drawable/giphy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>