<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_red"
    tools:context=".homePage">

    <Button
        android:id="@+id/btAppointmentForm"
        android:layout_width="108dp"
        android:layout_height="201dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/black"
        android:drawableTop="@mipmap/blood_donor_foreground"
        android:onClick="OnAddAppointment"
        android:paddingTop="1dp"
        android:paddingBottom="33dp"
        android:text="@string/appointment_form"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/btViewAppointment"
        android:layout_width="99dp"
        android:layout_height="200dp"
        android:backgroundTint="@color/black"
        android:drawableTop="@drawable/ic_viewappointment_foreground"
        android:onClick="OnGoViewAppointment"
        android:paddingTop="1dp"
        android:paddingBottom="33dp"
        android:text="View Appointment"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btCentre"
        app:layout_constraintStart_toEndOf="@+id/btAppointmentForm"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/btCentre"
        android:layout_width="116dp"
        android:layout_height="199dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/black"
        android:drawableTop="@mipmap/pin_foreground"
        android:onClick="OnCentreListing"
        android:paddingBottom="29dp"
        android:text="@string/centre_listing"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/bt_thingToDo"
        android:layout_width="353dp"
        android:layout_height="201dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:drawableTop="@mipmap/file_foreground"
        android:fontFamily="sans-serif-medium"
        android:onClick="OnThingToDo"
        android:paddingTop="8dp"
        android:paddingBottom="48dp"
        android:text="@string/things_to_do_before_donation"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAppointmentForm" />

    <Button
        android:id="@+id/button5"
        android:layout_width="353dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:drawableLeft="@mipmap/ic_launcher_round"
        android:gravity="center|left"
        android:onClick="homeToUser"
        android:paddingLeft="100dp"
        android:text="@string/user_profile"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:theme="@style/Button.White"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="325dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:shadowColor="@color/grey_font"
        android:shadowDx="-1"
        android:shadowDy="-1"
        android:shadowRadius="1"
        android:text="@string/donate_blood_save_life"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/inti_2022"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>